searchbar overlapped & setting integration bug

--- a/apps/web-giddh/src/app/new-inventory/component/inventory-master/inventory-master.component.scss
+++ b/apps/web-giddh/src/app/new-inventory/component/inventory-master/inventory-master.component.scss
@@ -10,7 +10,7 @@
         position: fixed;
         bottom: 10%;
         left: 50%;
-        z-index: 9999;
+        z-index: 999;
         transform: translateX(-50%);
         .search-icon {
             position: absolute;
